--- a/Homework 2/hw2-2/hw2_2_311511052.ipynb
+++ b/Homework 2/hw2-2/hw2_2_311511052.ipynb
@@ -5,34 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Tokenize the given text data with some off-the-shelf software.\n",
-    "2. Build the vocabulary (like the dictionary object in python) to map the token into some unique ID.\n",
-    "3. Select the pretrained embedding (Glove, Fasttext, Word2vec) as the initialization of your embedding layer. (Not necessary, but recommended)\n",
-    "4. Construct your transformer model and finally end up with some simple feed forward module.\n",
-    "5. Choose the suitable optimizer (Adam might be not suitable) and activation function (ReLU might be not suitable. Try Tanh or Swish?)\n",
-    "6. Try some tricks like learning rate scheduler.\n",
-    "7. Check some tutorial such as [Here](https://pytorch.org/tutorials/beginner/text_sentiment_ngrams_tutorial.html)."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Given the headline and the content of the news, you need to train a model to correctly classify the news into 4 different category:\n",
-    "1. Sports\n",
-    "2. Business\n",
-    "3. Tech\n",
-    "4. Media\n",
-    "\n",
-    "train.csv contains 4 columns:\n",
-    "id,category,headline,short_description\n",
-    "\n",
-    "test.csv contains 3 columns:\n",
-    "id,headline,short_description\n",
-    "\n",
-    "submission.csv contains 2 columns:\n",
-    "id,category"
+    "# Load library"
    ]
   },
   {
@@ -59,7 +32,49 @@
     "from torch.nn.utils.rnn import pad_sequence\n",
     "import numpy as np\n",
     "\n",
-    "warnings.filterwarnings(\"ignore\")\n"
+    "warnings.filterwarnings(\"ignore\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Preprocessing\n",
+    "\n",
+    "1. How do you choose the tokenizer for this task? Could we use the white space to tokenize the text? What about using the complicated tokenizer instead? Make some discussion.\n",
+    "\n",
+    "I think the answer about the first question is yes, but the result may not be good. Since that the white space tokenizer will split the word by the white space, but the word may not be split by the white space.\n",
+    "\n",
+    "But the task in this task is enough to use the white space tokenizer.\n",
+    "\n",
+    "I choose `torchtext` with `basic_english` for the tokenizer. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Why we need the special tokens like ⟨pad⟩, ⟨unk⟩?\n",
+    "\n",
+    "Special tokens like ⟨pad⟩ and ⟨unk⟩ are used in natural language processing tasks to represent special cases that might occur in the data.\n",
+    "- ⟨pad⟩: it is used to pad the sequence to the same length.\n",
+    "- ⟨unk⟩: it is used to represent the word that is not in the vocabulary."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Briefly explain how your procedure is run to handle the text data.\n",
+    "\n",
+    "- First, using `pandas` to read the data.\n",
+    "- Second, combine the `headline` and `short_description` to `text`, and filter the stop words with `nltk`.\n",
+    "- Thrid, using `torchtext` to build the vocabulary and tokenize the text.\n",
+    "- Fourth, with `GloVe` to build the embedding matrix.\n",
+    "- Fifth, build dataset and dataloader. And using `torch.nn.utils.rnn.pad_sequence` make sure the length of each batch is the same."
    ]
   },
   {
@@ -154,7 +169,6 @@
     "    label_list, text_list = [], []\n",
     "    for (_label, _text) in batch:\n",
     "         label_list.append(label_pipeline(_label))\n",
-    "         \n",
     "         processed_text = torch.tensor(myvocab(tokenizer(_text)), dtype=torch.int64)\n",
     "         text_list.append(processed_text)\n",
     "    text_list = torch.nn.utils.rnn.pad_sequence(text_list, padding_value=0)\n",
@@ -167,14 +181,49 @@
     "         processed_text = torch.tensor(myvocab(tokenizer(_text)), dtype=torch.int64)\n",
     "         text_list.append(processed_text)\n",
     "    text_list = torch.nn.utils.rnn.pad_sequence(text_list, padding_value=0)\n",
-    "    return text_list.to(device)\n",
+    "    return text_list.to(device)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Transformer\n",
     "\n",
+    "2. Discuss the model structure or hyperparameter setting in your design.\n",
+    "\n",
+    "Model structure:\n",
+    "- Embedding layer: using the embedding matrix to get the embedding of each word. We called `encoder` and load the pretrained embedding matrix.\n",
+    "- Positional encoding: using the positional encoding to add the position information to the embedding. We called `pos_encoder`.\n",
+    "- Encoder: using encoder to encode the input sequence. We called `transformer_encoder`.\n",
+    "- Using `torch.mean` to get the mean of the output of encoder.\n",
+    "- Decoder: using decoder to decode the encoded sequence. After that we can get the `num_class` output. We called `decoder`.\n",
+    "\n",
+    "Hyperparameter setting:\n",
+    "- `d_model` = 512\n",
+    "- `d_hid` = 100\n",
+    "- `nlayers` = 6\n",
+    "- `nhead` = 4\n",
+    "- `dropout` = 0.1\n",
+    "\n",
+    "The hyperparameter setting is the default setting in the `torch.nn.Transformer`.\n",
+    "But `d_model` is 100. Since the embedding matrix is 100 dimension.\n",
+    "And the `n_head` needs to be a factor of `d_model`, so I set it to 4."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class TransformerModel(nn.Module):\n",
     "\n",
     "    def __init__(self, num_class: int, d_model: int, nhead: int, d_hid: int,\n",
     "                 nlayers: int, dropout: float = 0.5, activatioln: str = 'relu') -> None:\n",
     "        super().__init__()\n",
-    "        pretrain_emb=torch.cat([torch.zeros((2,100)),text_vec.vectors])\n",
+    "        pretrain_emb=torch.cat([torch.zeros((2,100)),text_vec.vectors]) # add <pad> and <unk> to the pretrained embedding\n",
     "        self.model_type = 'Transformer'\n",
     "        self.pos_encoder = PositionalEncoding(d_model, dropout)\n",
     "        encoder_layers = TransformerEncoderLayer(d_model, nhead, d_hid, dropout,)\n",
@@ -240,17 +289,17 @@
    "outputs": [],
    "source": [
     "num_class = 4\n",
-    "emsize = 100  # embedding dimension\n",
+    "d_model = 100  # embedding dimension\n",
     "d_hid = 400  # dimension of the feedforward network model in ``nn.TransformerEncoder``\n",
-    "nlayers = 2  # number of ``nn.TransformerEncoderLayer`` in ``nn.TransformerEncoder``\n",
+    "nlayers = 6  # number of ``nn.TransformerEncoderLayer`` in ``nn.TransformerEncoder``\n",
     "nhead = 4  # number of heads in ``nn.MultiheadAttention``\n",
-    "dropout = 0.25  # dropout probability\n",
-    "total_epoch = 50\n",
+    "dropout = 0.1  # dropout probability\n",
+    "total_epoch = 100\n",
     "act_funct = 'silu'\n",
     "\n",
-    "model = TransformerModel(num_class, emsize, nhead, d_hid, nlayers, dropout, activatioln=act_funct).to(device)\n",
+    "model = TransformerModel(num_class, d_model, nhead, d_hid, nlayers, dropout, activatioln=act_funct).to(device)\n",
     "\n",
-    "optimizer = torch.optim.AdamW(model.parameters(), lr=5e-3, weight_decay=1e-4)\n",
+    "optimizer = torch.optim.AdamW(model.parameters(), lr=5e-4, weight_decay=1e-4)\n",
     "criterion = torch.nn.CrossEntropyLoss().to(device)\n",
     "scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(optimizer, T_max=total_epoch, eta_min=1e-5)"
    ]
