--- a/Homework 2/hw2-2/bonus.ipynb
+++ b/Homework 2/hw2-2/bonus.ipynb
@@ -21,6 +21,14 @@
     "from openprompt.plms import load_plm\n",
     "from openprompt.prompts import ManualVerbalizer\n",
     "import pandas\n",
+    "import warnings\n",
+    "import torch\n",
+    "from transformers import (\n",
+    "    AdamW,\n",
+    "    get_linear_schedule_with_warmup\n",
+    ")\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "# Load data\n",
     "train_tsvreader = pandas.read_csv(\"train.tsv\",sep='\\t')\n",
@@ -30,8 +38,8 @@
     "for i in range(len(train_tsvreader)):\n",
     "    train_data.append(InputExample(guid=i,\n",
     "                                   text_a=train_tsvreader['sentence'][i],\n",
-    "                                   text_b=None,\n",
-    "                                   label=train_tsvreader['label'][i]))\n",
+    "                                   label=train_tsvreader['label'][i],\n",
+    "                                    ))\n",
     "\n",
     "valid_tsvreader = pandas.read_csv(\"test.tsv\",sep='\\t')\n",
     "test_data       = []\n",
@@ -40,8 +48,8 @@
     "for i in range(len(valid_tsvreader)):\n",
     "    test_data.append(InputExample(guid=i,\n",
     "                                   text_a=valid_tsvreader['sentence'][i],\n",
-    "                                   text_b=None,\n",
-    "                                   label=valid_tsvreader['label'][i]))"
+    "                                   label=valid_tsvreader['label'][i],\n",
+    "                                   ))"
    ]
   },
   {
@@ -83,7 +91,7 @@
     "    template=mytemplate,\n",
     "    verbalizer=promptVerbalizer,\n",
     "    freeze_plm=False\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -100,34 +108,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "train_dataloader = PromptDataLoader(dataset=train_data, template=mytemplate, tokenizer=tokenizer,\n",
+    "    tokenizer_wrapper_class=WrapperClass, max_seq_length=256, decoder_max_length=3,\n",
+    "    batch_size=4,shuffle=True, teacher_forcing=False, predict_eos_token=False,\n",
+    "    truncate_method=\"head\")\n",
     "\n",
-    "train_dataloader = PromptDataLoader(\n",
-    "    dataset=train_data, \n",
-    "    template=template, \n",
-    "    tokenizer=tokenizer,\n",
-    "    tokenizer_wrapper_class=WrapperClass, \n",
-    "    max_seq_length=256, \n",
-    "    decoder_max_length=3,\n",
-    "    batch_size=4,\n",
-    "    shuffle=True, \n",
-    "    teacher_forcing=False, \n",
-    "    predict_eos_token=False,\n",
-    "    truncate_method=\"head\"\n",
-    ")\n",
-    "\n",
-    "validation_dataloader = PromptDataLoader(\n",
-    "    dataset=test_data, \n",
-    "    template=template, \n",
-    "    tokenizer=tokenizer,\n",
-    "    tokenizer_wrapper_class=WrapperClass, \n",
-    "    max_seq_length=256, \n",
-    "    decoder_max_length=3,\n",
-    "    batch_size=4,\n",
-    "    shuffle=False, \n",
-    "    teacher_forcing=False, \n",
-    "    predict_eos_token=False,\n",
-    "    truncate_method=\"head\"\n",
-    ")\n"
+    "validation_dataloader = PromptDataLoader(dataset=test_data, template=mytemplate, tokenizer=tokenizer,\n",
+    "    tokenizer_wrapper_class=WrapperClass, max_seq_length=256, decoder_max_length=3,\n",
+    "    batch_size=4,shuffle=False, teacher_forcing=False, predict_eos_token=False,\n",
+    "    truncate_method=\"head\")"
    ]
   },
   {
@@ -144,11 +133,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from transformers import (\n",
-    "    AdamW,\n",
-    "    get_linear_schedule_with_warmup\n",
-    ")\n",
-    "\n",
     "optimizer_grouped_parameters = [p for n, p in prompt_model.named_parameters() if p.requires_grad]\n",
     "\n",
     "# Using different optimizer for prompt parameters and model parameters\n",
@@ -158,22 +142,41 @@
     "\n",
     "scheduler = get_linear_schedule_with_warmup(optimizer, num_warmup_steps=200, num_training_steps=len(train_dataloader)*total_epochs)\n",
     "\n",
+    "loss_func = torch.nn.CrossEntropyLoss()\n",
+    "\n",
     "for epoch in range(total_epochs):\n",
+    "    tot_loss = 0\n",
     "    prompt_model.train()\n",
     "    for step, batch in enumerate(train_dataloader):\n",
-    "        loss, logits = prompt_model(**batch)\n",
+    "        logits = prompt_model(batch)\n",
+    "        labels = batch['label']\n",
+    "        loss = loss_func(logits, labels)\n",
     "        loss.backward()\n",
+    "        tot_loss += loss.item()\n",
     "        optimizer.step()\n",
-    "        scheduler.step()\n",
     "        optimizer.zero_grad()\n",
-    "        if step % 50 == 0:\n",
-    "            print(f\"Epoch {epoch} | Step {step} | Loss {loss}\")\n",
+    "        if step %100 ==1:\n",
+    "            print(\"Epoch {}, average loss: {}\".format(epoch, tot_loss/(step+1)), flush=True)\n",
+    "    scheduler.step()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "allpreds = []\n",
+    "alllabels = []\n",
+    "for step, inputs in enumerate(validation_dataloader):\n",
+    "    logits = prompt_model(inputs)\n",
+    "    labels = inputs['label']\n",
+    "    alllabels.extend(labels.cpu().tolist())\n",
+    "    allpreds.extend(torch.argmax(logits, dim=-1).cpu().tolist())\n",
     "\n",
-    "    prompt_model.eval()\n",
-    "    for step, batch in enumerate(validation_dataloader):\n",
-    "        loss, logits = prompt_model(**batch)\n",
-    "        if step % 50 == 0:\n",
-    "            print(f\"Epoch {epoch} | Step {step} | Loss {loss}\")"
+    "acc = sum([int(i==j) for i,j in zip(allpreds, alllabels)])/len(allpreds)\n",
+    "loss = loss_func(torch.tensor(allpreds), torch.tensor(alllabels))\n",
+    "print(\"Accuracy: {}, Loss: {}\".format(acc, loss))\n"
    ]
   }
  ],
