--- a/Homework 2/hw2-2/bonus.ipynb
+++ b/Homework 2/hw2-2/bonus.ipynb
@@ -143,21 +143,24 @@
     "scheduler = get_linear_schedule_with_warmup(optimizer, num_warmup_steps=200, num_training_steps=len(train_dataloader)*total_epochs)\n",
     "\n",
     "loss_func = torch.nn.CrossEntropyLoss()\n",
-    "\n",
+    "print(\"Start training...\")\n",
     "for epoch in range(total_epochs):\n",
     "    tot_loss = 0\n",
-    "    prompt_model.train()\n",
+    "    tot_acc = 0\n",
+    "    trainlabel, trainpreds = [], []\n",
     "    for step, batch in enumerate(train_dataloader):\n",
     "        logits = prompt_model(batch)\n",
     "        labels = batch['label']\n",
     "        loss = loss_func(logits, labels)\n",
     "        loss.backward()\n",
     "        tot_loss += loss.item()\n",
+    "        trainlabel.extend(labels.cpu().tolist())\n",
+    "        trainpreds.extend(torch.argmax(logits, dim=-1).cpu().tolist())\n",
     "        optimizer.step()\n",
     "        optimizer.zero_grad()\n",
-    "        if step %100 ==1:\n",
-    "            print(\"Epoch {}, average loss: {}\".format(epoch, tot_loss/(step+1)), flush=True)\n",
-    "    scheduler.step()"
+    "    scheduler.step()\n",
+    "    tot_acc = sum([int(i==j) for i,j in zip(trainpreds, trainlabel)])/len(trainpreds)\n",
+    "    print(\"Epoch: {}, Loss: {}, Accuracy: {}\".format(epoch, tot_loss/len(train_dataloader), tot_acc), flush=True)"
    ]
   },
   {
@@ -166,17 +169,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(\"Start testing...\")\n",
     "allpreds = []\n",
     "alllabels = []\n",
+    "valid_loss = 0\n",
     "for step, inputs in enumerate(validation_dataloader):\n",
     "    logits = prompt_model(inputs)\n",
     "    labels = inputs['label']\n",
+    "    loss = loss_func(logits, labels)\n",
+    "    valid_loss += loss.item()\n",
     "    alllabels.extend(labels.cpu().tolist())\n",
     "    allpreds.extend(torch.argmax(logits, dim=-1).cpu().tolist())\n",
     "\n",
     "acc = sum([int(i==j) for i,j in zip(allpreds, alllabels)])/len(allpreds)\n",
-    "loss = loss_func(torch.tensor(allpreds), torch.tensor(alllabels))\n",
-    "print(\"Accuracy: {}, Loss: {}\".format(acc, loss))\n"
+    "print(\"Accuracy: {}, Loss: {}\".format(acc, valid_loss/len(validation_dataloader)), flush=True)"
    ]
   }
  ],
